# 3Dmath

./: .gitignore  3Dmath.md  CMakeLists.txt  Makefile  ReadMe.md  practice.md
include/: vector3.hpp
src/: main.cpp  vector3.cpp
test/: CMakeLists.txt  t_vector3.cpp
